Basic dependency downloader & build.yml
It just automatically downloads the dependencies on supported platforms.