@@ -5,7 +5,7 @@ import net.minecraft.client.texture.NativeImageBackedTexture;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.util.concurrent.CompletableFuture;
 
 public final class ImageUtil {
@@ -13,7 +13,7 @@ public final class ImageUtil {
     public static CompletableFuture<NativeImageBackedTexture> fetchImageTextureFromUrl(String url) {
         return CompletableFuture.supplyAsync(() -> {
             try {
-                try (InputStream stream = new URL(url).openStream()) {
+                try (InputStream stream = URI.create(url).toURL().openStream()) {
                     return new NativeImageBackedTexture(NativeImage.read(stream));
                 }
             } catch (IOException e) {
